--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
+    "test:watch": "tsdx test --watch",
+    "test:coverage": "tsdx test --coverage",
     "lint": "tsdx lint",
     "prepare": "tsdx build"
-  },
+    },
   "peerDependencies": {
     "react": ">=16"
   },
@@ -29,12 +31,17 @@
   "author": "devrnt",
   "module": "dist/react-use-intercom.esm.js",
   "devDependencies": {
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jsdom": "^16.2.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "dotenv": "^8.2.0",
     "husky": "^4.2.5",
+    "jsdom": "^16.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "tsdx": "^0.13.2",
     "tslib": "^1.11.2",
     "typescript": "^3.8.3"
