chore: add deploy to github page workflow

--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
+  "homepage": "https://devrnt.github.io",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
