--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "react-use-intercom",
+  "author": "devrnt",
+  "module": "dist/react-use-intercom.esm.js",
+  "description": "React Intercom integration without the hassle, driven by hooks.",
   "version": "0.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/devrnt/react-use-intercom"
+  },
+  "bugs": {
+    "url": "https://github.com/devrnt/react-use-intercom/issues"
+  },
   "files": [
     "dist",
     "src"
@@ -41,9 +52,6 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "name": "react-use-intercom",
-  "author": "devrnt",
-  "module": "dist/react-use-intercom.esm.js",
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@testing-library/react-hooks": "^3.2.1",
