--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "bundlesize": "^0.18.0",
-    "cypress": "^4.5.0",
+    "cypress": "4.6.0",
     "dotenv": "^8.2.0",
     "husky": "^4.2.5",
     "jsdom": "^16.2.2",
@@ -78,7 +78,7 @@
     "react-test-renderer": "^16.13.1",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   },
   "resolutions": {
     "**/**/yargs-parser": "^13.1.2"
