chore: update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "*": ["src/*", "node_modules/*"]
     },
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": false,
   }
 }
