--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "bundlesize": "^0.18.0",
     "cypress": "5.4.0",
     "dotenv": "^8.2.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "husky": "^4.2.5",
     "jsdom": "^16.3.0",
     "np": "^6.3.2",
