--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "exports": {
     ".": {
+      "require": "./dist/index.js",
       "import": "./dist/react-use-intercom.esm.js"
     }
   },
