--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "keywords": [
     "react",
     "hooks",
+    "reactjs",
     "intercom",
+    "intercomjs",
     "react-intercom",
     "intercom-react",
     "typescript",
@@ -51,7 +53,8 @@
     "lint": "tsdx lint",
     "lint:fix": "tsdx lint --fix",
     "prepare": "tsdx build",
-    "bundlesize": "yarn build && bundlesize",
+    "size": "yarn build && size-limit",
+    "analyze": "yarn build && size-limit --why",
     "release": "np"
   },
   "peerDependencies": {
@@ -63,19 +66,23 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "bundlesize": [
+  "size-limit": [
     {
-      "path": "./dist/react-use-intercom.cjs.production.min.js",
-      "maxSize": "3 kB"
+      "path": "dist/react-use-intercom.cjs.production.min.js",
+      "limit": "3 KB"
+    },
+    {
+      "path": "dist/react-use-intercom.esm.js",
+      "limit": "3 KB"
     }
   ],
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.7.0",
     "@testing-library/react": "^11.0.0",
     "@testing-library/react-hooks": "^3.4.1",
     "@types/jsdom": "^16.2.3",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
-    "bundlesize": "^0.18.0",
     "cypress": "5.6.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
@@ -85,6 +92,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-test-renderer": "^17.0.0",
+    "size-limit": "^4.7.0",
     "tsdx": "^0.14.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.2"
