--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   },
   "keywords": [
     "react",
-    "hooks",
+    "reactjs",
     "intercom",
+    "intercomjs",
     "react-intercom",
     "intercom-react",
     "typescript",
@@ -70,24 +71,24 @@
     }
   ],
   "devDependencies": {
-    "@testing-library/react": "^11.0.0",
-    "@testing-library/react-hooks": "^3.4.1",
-    "@types/jsdom": "^16.2.3",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
+    "@testing-library/react": "^11.1.1",
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/jsdom": "^16.2.5",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "bundlesize": "^0.18.0",
     "cypress": "5.6.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "husky": "^4.2.5",
-    "jsdom": "^16.3.0",
+    "husky": "^4.3.0",
+    "jsdom": "^16.4.0",
     "np": "^7.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-test-renderer": "^17.0.0",
-    "tsdx": "^0.14.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.5"
   },
   "resolutions": {
     "**/**/yargs-parser": "^13.1.2"
