--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "typescript": "^4.0.5"
   },
   "resolutions": {
-    "**/**/yargs-parser": "^13.1.2"
+    "**/**/yargs-parser": "^13.1.2",
+    "**/typescript": "^4.0.5",
+    "**/@typescript-eslint/eslint-plugin": "^4.6.1",
+    "**/@typescript-eslint/parser": "^4.6.1"
   }
 }
