--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   ],
   "scripts": {
     "start": "tsdx watch",
-    "start:example": "yarn --cwd ./example install && yarn --cwd ./example start",
+    "start:playground": "yarn --cwd ./playground install && yarn --cwd ./playground start",
     "build": "tsdx build",
-    "build:example": "yarn --cwd ./example install && yarn --cwd ./example build",
+    "build:playground": "yarn --cwd ./playground install && yarn --cwd ./playground build",
     "test": "tsdx test --passWithNoTests",
     "test:watch": "tsdx test --watch",
     "test:coverage": "tsdx test --coverage",
