--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
       "maxSize": "3 kB"
     }
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "@testing-library/react": "^11.1.1",
     "@testing-library/react-hooks": "^5.0.0",
