chore: add browser entry in exports

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "import": "./dist/react-use-intercom.esm.js"
+      "import": "./dist/react-use-intercom.esm.js",
+      "browser": "./dist/react-use-intercom.esm.js"
     }
   },
   "keywords": [
