--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ jobs:
 
     steps:
       - name: Begin CI...
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Use Node 12
-        uses: actions/setup-node@v1
+      - name: Setup Node 16
+        uses: actions/setup-node@v3
         with:
-          node-version: 12.x
+          node-version: 16.17
 
       - name: Use cached node_modules
         uses: actions/cache@v1
