--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,10 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-20.04
-
+    strategy:
+      matrix:
+        node-version: [16,18]
+        
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -13,10 +16,10 @@ jobs:
         with:
           version: 7
 
-      - name: Use Node 16
+      - name: Use Node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
       - name: Install dependencies
