--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,9 @@ on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node-version: [18]
     
     steps:
       - name: Checkout
@@ -13,10 +16,10 @@ jobs:
         with:
           version: 7
 
-      - name: Use Node 16
+      - name: Use Node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
       - name: Install dependencies
