Exports types for ESM module usage
Added types to package json exports so that ESM projects get correct types

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     ".": {
       "require": "./dist/index.js",
       "import": "./dist/react-use-intercom.esm.js",
-      "browser": "./dist/react-use-intercom.esm.js"
+      "browser": "./dist/react-use-intercom.esm.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "keywords": [
