Fix size action

--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -34,4 +34,4 @@ jobs:
           install: false
           start: pnpm dev:playground
           wait-on: 'http://localhost:5173'
-          headless: true
+          working-directory: packages/cypress
