--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm lint
 
       - name: Test
-        run: pnpm test --coverage --maxWorkers=2
+        run: pnpm test
 
       - name: Build
         run: pnpm build
