--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-use-intercom",
   "author": "devrnt",
-  "module": "dist/react-use-intercom.esm.js",
+  "module": "dist/index.mjs",
   "description": "React Intercom integration without the hassle, driven by hooks.",
   "homepage": "https://github.com/devrnt/react-use-intercom#readme",
   "version": "3.0.0",
@@ -26,8 +26,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
-      "import": "./dist/react-use-intercom.esm.js",
-      "browser": "./dist/react-use-intercom.esm.js"
+      "import": "./dist/index.mjs",
+      "browser": "./dist/index.mjs"
     }
   },
   "keywords": [
@@ -44,8 +44,8 @@
     "gatsby"
   ],
   "scripts": {
-    "dev": "tsdx watch",
-    "build": "tsdx build",
+    "dev": "tsup src/index.ts --format esm,cjs --sourcemap --watch --dts --external react",
+    "build": "tsup",
     "test": "tsdx test --passWithNoTests",
     "test:watch": "tsdx test --watch",
     "test:coverage": "tsdx test --coverage",
@@ -81,9 +81,9 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.3",
-    "@types/jest": "^27.5.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^27.5.1",
     "@types/jsdom": "^16.2.5",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
@@ -99,6 +99,7 @@
     "size-limit": "^7.0.3",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
+    "tsup": "^6.5.0",
     "typescript": "^4.0.5"
   },
   "pnpm": {
