--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -46,9 +46,9 @@
   "scripts": {
     "dev": "tsup src/index.ts --format esm,cjs --sourcemap --watch --dts --external react",
     "build": "tsup",
-    "test": "tsdx test --passWithNoTests",
-    "test:watch": "tsdx test --watch",
-    "test:coverage": "tsdx test --coverage",
+    "test": "jest test",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "e2e": "cypress run",
     "e2e:open": "cypress open",
     "lint": "eslint src test",
@@ -83,7 +83,7 @@
     "@size-limit/preset-small-lib": "^7.0.3",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^27.5.2",
     "@types/jsdom": "^16.2.5",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
@@ -91,16 +91,19 @@
     "dotenv": "^16.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^7.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "^16.4.0",
     "np": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.0.0",
     "size-limit": "^7.0.3",
+    "ts-jest": "^29.0.5",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "tsup": "^6.5.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.9.4"
   },
   "pnpm": {
     "overrides": {
