--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "packageManager": "pnpm@7.26.3",
   "scripts": {
-    "dev": "turbo run dev --no-cache --continue",
+    "dev": "turbo run dev --filter=react-use-intercom --filter=playground --no-cache --continue",
     "dev:playground": "turbo run dev --parallel --filter=playground",
+    "dev:examples": "turbo run dev --parallel --filter=*-example --filter=react-use-intercom",
     "test": "turbo run test",
     "build": "turbo run build",
     "build:playground": "turbo run build --filter=playground",
