--- a/packages/react-use-intercom/cypress/tsconfig.json
+++ b/packages/react-use-intercom/cypress/tsconfig.json
@@ -1,12 +1,6 @@
 {
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "../node_modules",
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress"]
   },
-  "include": [
-    "**/*.ts"
-  ]
+  "files": ["*.ts"]
 }
