--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -49,7 +49,7 @@
     "test": "jest test",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "e2e": "cypress run",
+    "e2e": "cypress open",
     "e2e:open": "cypress open",
     "lint": "eslint src test",
     "lint:fix": "eslint --fix",
@@ -85,9 +85,10 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^27.5.2",
     "@types/jsdom": "^16.2.5",
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "cypress": "8.7.0",
+    "cypress": "12.5.1",
     "dotenv": "^16.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^7.0.0",
@@ -99,18 +100,11 @@
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.0.0",
     "size-limit": "^7.0.3",
+    "source-map": "0.6.1",
     "ts-jest": "^29.0.5",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
-  },
-  "pnpm": {
-    "overrides": {
-      "yargs-parser": "^13.1.2",
-      "typescript": "^4.0.5",
-      "@typescript-eslint/eslint-plugin": "^4.6.1",
-      "@typescript-eslint/parser": "^4.6.1"
-    }
   }
 }
