--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -20,7 +20,7 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=18"
   },
   "exports": {
     ".": {
@@ -53,26 +53,19 @@
     "e2e:open": "cypress open",
     "lint": "eslint src test",
     "lint:fix": "eslint --fix",
-    "prepare": "tsdx build",
-    "bundlesize": "pnpm build && size-limit",
-    "release": "np"
+    "bundlesize": "pnpm build && size-limit"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
   "size-limit": [
     {
-      "path": "./dist/react-use-intercom.cjs.production.min.js",
+      "path": "./dist/index.js",
       "limit": "3 kB"
     },
     {
-      "path": "./dist/react-use-intercom.esm.js",
+      "path": "./dist/index.mjs",
       "limit": "3 kB"
     }
   ],
@@ -89,20 +82,15 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "cypress": "12.5.1",
-    "dotenv": "^16.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^7.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "^16.4.0",
-    "np": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.0.0",
     "size-limit": "^7.0.3",
     "source-map": "0.6.1",
     "ts-jest": "^29.0.5",
-    "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
