--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -49,7 +49,7 @@
     "test": "jest test",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "e2e": "cypress open",
+    "e2e": "cypress run",
     "e2e:open": "cypress open",
     "lint": "eslint src test",
     "lint:fix": "eslint --fix",
