--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -25,15 +25,24 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build
+        run: pnpm build
+
       - name: Cypress install
         run: ./node_modules/cypress/bin/cypress install
 
       - name: Cypress run
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v4
         with:
           install: false
+          # build playground
+          # build: pnpm dev:playground
+          # start playground
           start: pnpm dev:playground
-          wait-on: 'http://localhost:5173/'
+          command: pnpm e2e
+          # FIXME: this breaks it
+          # wait-on: 'http://localhost:5173'
+          # project: /packages/react-use-intercom
 
       # after the test run completes
       # store videos and any screenshots
@@ -46,4 +55,4 @@ jobs:
         if: failure()
         with:
           name: cypress-screenshots
-          path: cypress/screenshots
+          path: ./packages/react-use-intercom/cypress/screenshots
