--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -7,7 +7,7 @@
   "version": "3.0.0",
   "license": "MIT",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/devrnt/react-use-intercom"
