Set target to es2017

--- a/packages/react-use-intercom/tsconfig.json
+++ b/packages/react-use-intercom/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
+    "target": "ESNext",
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
