--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,8 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["react-use-intercom"]],
-  "linked": [],
+  "ignore": ["playground", "gatsby-example", "nextjs-example"],
   "access": "public",
   "updateInternalDependencies": "patch",
   "baseBranch": "main",
