Remove src folder from files

--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -17,8 +17,7 @@
     "url": "https://github.com/devrnt/react-use-intercom/issues"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "engines": {
     "node": ">=18"
