--- a/apps/examples/nextjs/package.json
+++ b/apps/examples/nextjs/package.json
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-use-intercom": "workspace:*"
   }
 }
