--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -30,17 +30,13 @@ jobs:
         run: ./node_modules/cypress/bin/cypress install
 
       - name: Cypress run
-        uses: cypress-io/github-action@v4
+        uses: cypress-io/github-action@v6
         with:
           install: false
-          # build playground
-          # build: pnpm dev:playground
-          # start playground
           start: pnpm dev
           command: pnpm e2e
-          # FIXME: this breaks it
-          # wait-on: 'http://localhost:5173'
-          # project: /packages/react-use-intercom
+          wait-on: 'http://localhost:5173'
+          project: ./apps/playground
 
       # after the test run completes
       # store videos and any screenshots
