--- a/packages/react-use-intercom/tsconfig.json
+++ b/packages/react-use-intercom/tsconfig.json
@@ -13,13 +13,13 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "baseUrl": "./",
     "paths": {
       "*": ["src/*", "node_modules/*"]
     },
     "jsx": "react",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
   }
 }
