--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "^22.13.1",
     "pnpm": "^10.2.0"
   },
+  "type": "module",
   "scripts": {
     "dev": "turbo run dev --parallel --filter=playground --filter=react-use-intercom",
     "dev:examples": "turbo run dev --parallel --filter=*-example --filter=react-use-intercom",
@@ -21,13 +22,15 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.3",
-    "turbo": "^2.4.0"
+    "@eslint/js": "^9.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.4.2",
+    "turbo": "^2.4.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0"
   }
 }
