Add nextjs app router example

--- a/apps/examples/nextjs-app-router/package.json
+++ b/apps/examples/nextjs-app-router/package.json
@@ -1,13 +1,14 @@
 {
+  "name": "nextjs-app-router-example",
+  "version": "0.1.0",
   "private": true,
-  "name": "nextjs-example",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.7",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use-intercom": "workspace:*"
