Drop workspace protocol in examples
Tweak the pnpm config, so it first looks for local packages and fallback to remote registry

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 auto-install-peers = true
 node-linker=hoisted
+# This allows us to use workspace packages if available, otherwise pull from the remote registry
+link-workspace-packages = true
