--- a/apps/examples/gatsby/package.json
+++ b/apps/examples/gatsby/package.json
@@ -16,6 +16,6 @@
     "gatsby": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use-intercom": "workspace:*"
+    "react-use-intercom": "*"
   }
 }
