--- a/apps/examples/nextjs-app-router/package.json
+++ b/apps/examples/nextjs-app-router/package.json
@@ -11,6 +11,6 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use-intercom": "workspace:*"
+    "react-use-intercom": "*"
   }
 }
