--- a/apps/examples/nextjs-page-router/package.json
+++ b/apps/examples/nextjs-page-router/package.json
@@ -10,6 +10,6 @@
     "next": "13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use-intercom": "workspace:*"
+    "react-use-intercom": "*"
   }
 }
