--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "ignore": ["playground", "gatsby-example", "nextjs-example"],
+  "ignore": ["apps/playground/**", "apps/examples/**"],
   "access": "public",
   "updateInternalDependencies": "patch",
   "baseBranch": "main",
