--- a/packages/react-use-intercom/package.json
+++ b/packages/react-use-intercom/package.json
@@ -1,17 +1,18 @@
 {
   "name": "react-use-intercom",
   "author": "devrnt",
-  "module": "dist/index.mjs",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "description": "React Intercom integration without the hassle, driven by hooks.",
   "homepage": "https://github.com/devrnt/react-use-intercom#readme",
   "version": "5.4.1",
   "license": "MIT",
-  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/devrnt/react-use-intercom"
+    "url": "git+https://github.com/devrnt/react-use-intercom.git"
   },
   "bugs": {
     "url": "https://github.com/devrnt/react-use-intercom/issues"
@@ -21,10 +22,15 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "browser": "./dist/index.mjs"
+      "browser": "./dist/index.js",
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      },
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
     }
   },
   "keywords": [
@@ -48,7 +54,8 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src test",
     "lint:fix": "eslint --fix",
-    "bundlesize": "pnpm build && size-limit"
+    "bundlesize": "pnpm build && size-limit",
+    "publint": "publint"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
@@ -56,11 +63,11 @@
   },
   "size-limit": [
     {
-      "path": "./dist/index.js",
+      "path": "./dist/index.cjs",
       "limit": "3 kB"
     },
     {
-      "path": "./dist/index.mjs",
+      "path": "./dist/index.js",
       "limit": "3 kB"
     }
   ],
@@ -77,6 +84,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "publint": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
